src/objects/FormSection__c.object
<CustomObject>
    <fields>
        <fullName>ColumnWidth__c</fullName>
        <label>Column Width</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Form Sections</relationshipLabel>
        <relationshipName>FormSections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SectionTitle__c</fullName>
        <label>Section Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StyleClass__c</fullName>
        <label>Style Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Form Section</label>
    <nameField>
        <label>Form Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>